# GoogleHashcode2019

./: .gitignore  CMakeLists.txt  PhotoParser.cpp  PhotoParser.h  README.md  main.cpp  slideSorter.cpp  slideSorter.h
pizza/: CMakeLists.txt
pizza/include/: PizzaParser.h  poging1.h  poging2.h
pizza/src/: CMakeLists.txt  PizzaParser.cpp  main.cpp  poging1.cpp  poging2.cpp
src/: main.cpp
